Fixed navbar alignment

--- a/app/View/mainView/mainView.css
+++ b/app/View/mainView/mainView.css
@@ -1,4 +1,7 @@
 /*Styling for the main header*/
+.headerLinks {
+    background-color: white;
+}
 md-toolbar.md-accent {
     background-color: white !important;
 }
